ADDED setting new base currency

--- a/app/src/main/res/layout/item_rate.xml
+++ b/app/src/main/res/layout/item_rate.xml
@@ -13,8 +13,8 @@
         android:layout_weight="1"
         tools:text="USD" />
 
-    <TextView
-        android:id="@+id/valueTextView"
+    <EditText
+        android:id="@+id/valueEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
