--- a/app/src/main/res/layout/item_rate.xml
+++ b/app/src/main/res/layout/item_rate.xml
@@ -8,16 +8,18 @@
 
     <TextView
         android:id="@+id/currencyTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
         tools:text="USD" />
 
     <EditText
         android:id="@+id/valueEditText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
+        android:gravity="end|center_vertical"
+        android:maxLines="1"
         tools:text="1.12" />
 
 </LinearLayout>
