--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#03A9F4</color>
     <color name="colorPrimaryDark">#2196F3</color>
     <color name="colorAccent">#BA68C8</color>
+
+    <color name="text_light">#8B959E</color>
+    <color name="text_color">#191C1F</color>
 </resources>
