--- a/app/src/main/res/layout/item_rate.xml
+++ b/app/src/main/res/layout/item_rate.xml
@@ -50,6 +50,7 @@
         android:gravity="end|center_vertical"
         android:maxLines="1"
         android:textColor="@color/text_color"
+        android:inputType="numberDecimal"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/verticalGuideline"
