--- a/app/src/main/res/layout/item_rate.xml
+++ b/app/src/main/res/layout/item_rate.xml
@@ -34,12 +34,16 @@
 
     <TextView
         android:id="@+id/currencyNameTextView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginLeft="16dp"
+        android:ellipsize="end"
+        android:gravity="start"
+        android:maxLines="1"
         android:textColor="@color/text_light"
         app:layout_constraintBottom_toBottomOf="@id/currencyImageView"
+        app:layout_constraintEnd_toStartOf="@id/verticalGuideline"
         app:layout_constraintStart_toEndOf="@id/currencyImageView"
         tools:text="US Dollar" />
 
@@ -48,13 +52,14 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:gravity="end|center_vertical"
+        android:inputType="numberDecimal"
         android:maxLines="1"
         android:textColor="@color/text_color"
-        android:inputType="numberDecimal"
         android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/verticalGuideline"
-        app:layout_constraintTop_toTopOf="@id/currencyImageView"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="1.12" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -62,6 +67,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.75" />
+        app:layout_constraintGuide_percent="0.70" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
