CHANGED colors (mainly status bar color)

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#03A9F4</color>
-    <color name="colorPrimaryDark">#2196F3</color>
+    <color name="colorPrimary">#33000000</color>
+    <color name="colorPrimaryDark">#33000000</color>
     <color name="colorAccent">#BA68C8</color>
 
     <color name="text_light">#8B959E</color>
